--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
