Refine clothing size options styling

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!-- Etapa 3: Tamanho atual -->
         <section class="quiz-step" data-step="3">
             <h1 class="quiz-title">Escolha o tamanho da sua roupa</h1>
-            <div class="options-grid">
+            <div class="options-grid clothing-size-grid">
                 <button class="option-card grid-card" data-value="PP">
                     <img src="https://i.ibb.co/Tq2ChLzV/2.webp" alt="PP" class="grid-img">
                     <span>PP</span>
