Fix clothing size layout: apply 2-column styles to Steps 3 and 4

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <!-- Etapa 4: Tamanho desejado -->
         <section class="quiz-step" data-step="4">
             <h1 class="quiz-title">Escolha o tamanho que você quer usar</h1>
-            <div class="options-grid">
+            <div class="options-grid clothing-size-grid">
                 <button class="option-card grid-card" data-value="PP">
                     <img src="https://i.ibb.co/Tq2ChLzV/2.webp" alt="PP" class="grid-img">
                     <span>PP</span>
