--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <button class="option-card" data-value="raramente"><span>Raramente</span></button>
                 <button class="option-card" data-value="nunca"><span>Nunca</span></button>
             </div>
-            <img src="https://i.ibb.co/Q3fJjcTL/a.webp" alt="Vestido" class="step-img-large">
+            <img src="https://i.ibb.co/Q3fJjcTL/a.webp" alt="Vestido" class="step-img-large img-small">
         </section>
 
         <!-- Etapa 6: Prova Social Carol -->
@@ -225,7 +225,7 @@
                 <button class="option-card" data-value="mais-3-anos"><span>Mais de 3 anos atrás</span></button>
             </div>
             <img src="https://i.ibb.co/PZ6gxFVM/71c71a60-cefe-4ccb-8f0c-6d2dc81b6c59.webp" alt="Silhueta"
-                class="step-img-large">
+                class="step-img-large img-small">
         </section>
 
         <!-- Etapa 10: Conhecimento sobre JI -->
@@ -442,62 +442,62 @@
             <p class="quiz-subtitle">Selecione todas que se aplicam</p>
 
             <div class="food-category">
-                <h3>Vegetais</h3>
+                <h3>Vegetais 🥦</h3>
                 <div class="food-grid">
-                    <button class="food-btn" data-value="brocolis">🥦 Brócolis</button>
-                    <button class="food-btn" data-value="cenoura">🥕 Cenoura</button>
-                    <button class="food-btn" data-value="espinafre">🥬 Espinafre</button>
-                    <button class="food-btn" data-value="tomate">🍅 Tomate</button>
+                    <button class="food-btn" data-value="brocolis">Brócolis</button>
+                    <button class="food-btn" data-value="cenoura">Cenoura</button>
+                    <button class="food-btn" data-value="espinafre">Espinafre</button>
+                    <button class="food-btn" data-value="tomate">Tomate</button>
                 </div>
             </div>
 
             <div class="food-category">
-                <h3>Grãos e Pães</h3>
+                <h3>Grãos e Pães 🍞</h3>
                 <div class="food-grid">
-                    <button class="food-btn" data-value="arroz">🍚 Arroz</button>
-                    <button class="food-btn" data-value="pao">🍞 Pão</button>
-                    <button class="food-btn" data-value="aveia">🌾 Aveia</button>
-                    <button class="food-btn" data-value="massa">🍝 Massa</button>
+                    <button class="food-btn" data-value="arroz">Arroz</button>
+                    <button class="food-btn" data-value="pao">Pão</button>
+                    <button class="food-btn" data-value="aveia">Aveia</button>
+                    <button class="food-btn" data-value="massa">Massa</button>
                 </div>
             </div>
 
             <div class="food-category">
-                <h3>Carnes e Ovos</h3>
+                <h3>Carnes e Ovos 🥩</h3>
                 <div class="food-grid">
-                    <button class="food-btn" data-value="frango">🍗 Frango</button>
-                    <button class="food-btn" data-value="carne">🥩 Carne</button>
-                    <button class="food-btn" data-value="ovos">🥚 Ovos</button>
-                    <button class="food-btn" data-value="porco">🥓 Porco</button>
+                    <button class="food-btn" data-value="frango">Frango</button>
+                    <button class="food-btn" data-value="carne">Carne</button>
+                    <button class="food-btn" data-value="ovos">Ovos</button>
+                    <button class="food-btn" data-value="porco">Porco</button>
                 </div>
             </div>
 
             <div class="food-category">
-                <h3>Peixe</h3>
+                <h3>Peixe 🐟</h3>
                 <div class="food-grid">
-                    <button class="food-btn" data-value="salmao">🐟 Salmão</button>
-                    <button class="food-btn" data-value="atum">🐠 Atum</button>
-                    <button class="food-btn" data-value="tilapia">🐡 Tilápia</button>
-                    <button class="food-btn" data-value="camarao">🦐 Camarão</button>
+                    <button class="food-btn" data-value="salmao">Salmão</button>
+                    <button class="food-btn" data-value="atum">Atum</button>
+                    <button class="food-btn" data-value="tilapia">Tilápia</button>
+                    <button class="food-btn" data-value="camarao">Camarão</button>
                 </div>
             </div>
 
             <div class="food-category">
-                <h3>Laticínios</h3>
+                <h3>Laticínios 🧀</h3>
                 <div class="food-grid">
-                    <button class="food-btn" data-value="leite">🥛 Leite</button>
-                    <button class="food-btn" data-value="queijo">🧀 Queijo</button>
-                    <button class="food-btn" data-value="iogurte">🥣 Iogurte</button>
-                    <button class="food-btn" data-value="manteiga">🧈 Manteiga</button>
+                    <button class="food-btn" data-value="leite">Leite</button>
+                    <button class="food-btn" data-value="queijo">Queijo</button>
+                    <button class="food-btn" data-value="iogurte">Iogurte</button>
+                    <button class="food-btn" data-value="manteiga">Manteiga</button>
                 </div>
             </div>
 
             <div class="food-category">
-                <h3>Frutas</h3>
+                <h3>Frutas 🍎</h3>
                 <div class="food-grid">
-                    <button class="food-btn" data-value="maca">🍎 Maçã</button>
-                    <button class="food-btn" data-value="banana">🍌 Banana</button>
-                    <button class="food-btn" data-value="laranja">🍊 Laranja</button>
-                    <button class="food-btn" data-value="morango">🍓 Morango</button>
+                    <button class="food-btn" data-value="maca">Maçã</button>
+                    <button class="food-btn" data-value="banana">Banana</button>
+                    <button class="food-btn" data-value="laranja">Laranja</button>
+                    <button class="food-btn" data-value="morango">Morango</button>
                 </div>
             </div>
 
@@ -552,7 +552,7 @@
                 <button class="option-card" data-value="5+"><span>5 ou mais vezes por semana</span></button>
             </div>
             <img src="https://i.ibb.co/Q2g89qC/Captura-de-tela-2025-07-23-003649.png" alt="Mulher exercitando"
-                class="step-img-large">
+                class="step-img-large img-large">
         </section>
 
         <!-- Etapa 21: Apoio -->
@@ -591,7 +591,7 @@
                 </button>
             </div>
             <img src="https://i.ibb.co/xtbJmxgG/Captura-de-tela-2025-07-23-003858.png" alt="Rotina trabalho"
-                class="step-img-large">
+                class="step-img-large img-large">
         </section>
 
         <!-- Etapa 23: Dia a dia -->
@@ -617,7 +617,7 @@
         <section class="quiz-step interlude" data-step="24">
             <h1 class="quiz-title">Dinheiro e peso: um impacto inesperado na sua carreira</h1>
             <img src="https://i.ibb.co/Z1NDFSgL/980e0f99-2a77-47d0-bab1-e13de8afe2ce.webp" alt="Carreira e peso"
-                class="step-img-large">
+                class="step-img-large img-large">
             <p class="interlude-text">Mulheres com sobrepeso frequentemente ganham menos do que aquelas com peso
                 saudável. Nosso plano pode te ajudar a atingir um peso mais saudável, aumentando sua energia e confiança
                 para alcançar seus objetivos profissionais.</p>
@@ -680,7 +680,7 @@
                 </button>
             </div>
             <img src="https://i.ibb.co/JjbBMFHW/Captura-de-tela-2025-07-23-004104.png" alt="Sono"
-                class="step-img-large">
+                class="step-img-large img-large">
         </section>
 
         <!-- Etapa 28: Água -->
@@ -704,7 +704,8 @@
                     <span>Mais de 3 litros</span>
                 </button>
             </div>
-            <img src="https://i.ibb.co/ZrkfFQL/Captura-de-tela-2025-07-23-004143.png" alt="Água" class="step-img-large">
+            <img src="https://i.ibb.co/ZrkfFQL/Captura-de-tela-2025-07-23-004143.png" alt="Água"
+                class="step-img-large img-large">
         </section>
 
         <!-- Etapa 29: Problemas físicos -->
@@ -1277,26 +1278,22 @@
                     <h3>Quem Usa <br><strong>TEM RESULTADO</strong> 😉👇</h3>
                 </div>
 
-                <div class="results-gallery">
-                    <div class="result-item">
-                        <a href="https://ibb.co/BHFNSwx3"><img src="https://i.ibb.co/Ps0Qftnj/unnamed-52.webp"
-                                alt="Resultado comprovado de aluna Seca Jejum" border="0"></a>
+                <div class="results-gallery stories-grid">
+                    <div class="story-card active">
+                        <img src="https://i.ibb.co/Ps0Qftnj/unnamed-52.webp" alt="Resultado comprovado"
+                            class="img-large">
                     </div>
-                    <div class="result-item">
-                        <a href="https://ibb.co/JR0tjCbn"><img src="https://i.ibb.co/qMXjYx4B/unnamed-53.webp"
-                                alt="Evolução real de aluna com o plano" border="0"></a>
+                    <div class="story-card">
+                        <img src="https://i.ibb.co/qMXjYx4B/unnamed-53.webp" alt="Evolução real" class="img-large">
                     </div>
-                    <div class="result-item">
-                        <a href="https://ibb.co/fzQ9Rtcp"><img src="https://i.ibb.co/q3xCG9Zs/unnamed-55.webp"
-                                alt="Antes e depois do jejum intermitente" border="0"></a>
+                    <div class="story-card">
+                        <img src="https://i.ibb.co/q3xCG9Zs/unnamed-55.webp" alt="Antes e depois" class="img-large">
                     </div>
-                    <div class="result-item">
-                        <a href="https://ibb.co/zTXNkG4f"><img src="https://i.ibb.co/rRxvW4wy/unnamed-54.webp"
-                                alt="Perda de peso visível com o método" border="0"></a>
+                    <div class="story-card">
+                        <img src="https://i.ibb.co/rRxvW4wy/unnamed-54.webp" alt="Perda de peso" class="img-large">
                     </div>
-                    <div class="result-item">
-                        <a href="https://ibb.co/BKTshsR0"><img src="https://i.ibb.co/bRNd4dnc/unnamed-56.webp"
-                                alt="Resultados alcançados por nossas alunas" border="0"></a>
+                    <div class="story-card">
+                        <img src="https://i.ibb.co/bRNd4dnc/unnamed-56.webp" alt="Resultados" class="img-large">
                     </div>
                 </div>
 
