Resize images, adjust emojis, enlarge chart, and add carousel

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <button class="option-card" data-value="raramente"><span>Raramente</span></button>
                 <button class="option-card" data-value="nunca"><span>Nunca</span></button>
             </div>
-            <img src="https://i.ibb.co/Q3fJjcTL/a.webp" alt="Vestido" class="step-img-large img-small">
+            <img src="https://i.ibb.co/Q3fJjcTL/a.webp" alt="Vestido" class="step-img-small">
         </section>
 
         <!-- Etapa 6: Prova Social Carol -->
@@ -225,7 +225,7 @@
                 <button class="option-card" data-value="mais-3-anos"><span>Mais de 3 anos atrás</span></button>
             </div>
             <img src="https://i.ibb.co/PZ6gxFVM/71c71a60-cefe-4ccb-8f0c-6d2dc81b6c59.webp" alt="Silhueta"
-                class="step-img-large img-small">
+                class="step-img-small">
         </section>
 
         <!-- Etapa 10: Conhecimento sobre JI -->
@@ -442,7 +442,7 @@
             <p class="quiz-subtitle">Selecione todas que se aplicam</p>
 
             <div class="food-category">
-                <h3>Vegetais 🥦</h3>
+                <h3>🥦 Vegetais</h3>
                 <div class="food-grid">
                     <button class="food-btn" data-value="brocolis">Brócolis</button>
                     <button class="food-btn" data-value="cenoura">Cenoura</button>
@@ -452,7 +452,7 @@
             </div>
 
             <div class="food-category">
-                <h3>Grãos e Pães 🍞</h3>
+                <h3>🍞 Grãos e Pães</h3>
                 <div class="food-grid">
                     <button class="food-btn" data-value="arroz">Arroz</button>
                     <button class="food-btn" data-value="pao">Pão</button>
@@ -462,7 +462,7 @@
             </div>
 
             <div class="food-category">
-                <h3>Carnes e Ovos 🥩</h3>
+                <h3>🥩 Carnes e Ovos</h3>
                 <div class="food-grid">
                     <button class="food-btn" data-value="frango">Frango</button>
                     <button class="food-btn" data-value="carne">Carne</button>
@@ -472,7 +472,7 @@
             </div>
 
             <div class="food-category">
-                <h3>Peixe 🐟</h3>
+                <h3>🐟 Peixe</h3>
                 <div class="food-grid">
                     <button class="food-btn" data-value="salmao">Salmão</button>
                     <button class="food-btn" data-value="atum">Atum</button>
@@ -482,7 +482,7 @@
             </div>
 
             <div class="food-category">
-                <h3>Laticínios 🧀</h3>
+                <h3>🥛 Laticínios</h3>
                 <div class="food-grid">
                     <button class="food-btn" data-value="leite">Leite</button>
                     <button class="food-btn" data-value="queijo">Queijo</button>
@@ -492,7 +492,7 @@
             </div>
 
             <div class="food-category">
-                <h3>Frutas 🍎</h3>
+                <h3>🍎 Frutas</h3>
                 <div class="food-grid">
                     <button class="food-btn" data-value="maca">Maçã</button>
                     <button class="food-btn" data-value="banana">Banana</button>
@@ -552,7 +552,7 @@
                 <button class="option-card" data-value="5+"><span>5 ou mais vezes por semana</span></button>
             </div>
             <img src="https://i.ibb.co/Q2g89qC/Captura-de-tela-2025-07-23-003649.png" alt="Mulher exercitando"
-                class="step-img-large img-large">
+                class="step-img-xl">
         </section>
 
         <!-- Etapa 21: Apoio -->
@@ -591,7 +591,7 @@
                 </button>
             </div>
             <img src="https://i.ibb.co/xtbJmxgG/Captura-de-tela-2025-07-23-003858.png" alt="Rotina trabalho"
-                class="step-img-large img-large">
+                class="step-img-xl">
         </section>
 
         <!-- Etapa 23: Dia a dia -->
@@ -617,7 +617,7 @@
         <section class="quiz-step interlude" data-step="24">
             <h1 class="quiz-title">Dinheiro e peso: um impacto inesperado na sua carreira</h1>
             <img src="https://i.ibb.co/Z1NDFSgL/980e0f99-2a77-47d0-bab1-e13de8afe2ce.webp" alt="Carreira e peso"
-                class="step-img-large img-large">
+                class="step-img-xl">
             <p class="interlude-text">Mulheres com sobrepeso frequentemente ganham menos do que aquelas com peso
                 saudável. Nosso plano pode te ajudar a atingir um peso mais saudável, aumentando sua energia e confiança
                 para alcançar seus objetivos profissionais.</p>
@@ -679,8 +679,7 @@
                     <span>Mais de 8 horas</span>
                 </button>
             </div>
-            <img src="https://i.ibb.co/JjbBMFHW/Captura-de-tela-2025-07-23-004104.png" alt="Sono"
-                class="step-img-large img-large">
+            <img src="https://i.ibb.co/JjbBMFHW/Captura-de-tela-2025-07-23-004104.png" alt="Sono" class="step-img-xl">
         </section>
 
         <!-- Etapa 28: Água -->
@@ -704,8 +703,7 @@
                     <span>Mais de 3 litros</span>
                 </button>
             </div>
-            <img src="https://i.ibb.co/ZrkfFQL/Captura-de-tela-2025-07-23-004143.png" alt="Água"
-                class="step-img-large img-large">
+            <img src="https://i.ibb.co/ZrkfFQL/Captura-de-tela-2025-07-23-004143.png" alt="Água" class="step-img-xl">
         </section>
 
         <!-- Etapa 29: Problemas físicos -->
@@ -1255,22 +1253,32 @@
             <div class="success-stories-section">
                 <h2 class="section-title">Veja as histórias de sucesso das nossas alunas</h2>
 
-                <div class="stories-grid">
-                    <div class="story-card">
-                        <a href="https://ibb.co/hF0V9r7M"><img src="https://i.ibb.co/pjqdwN0P/unnamed-49.webp"
-                                alt="Transformação antes e depois - História de Sucesso" border="0"></a>
-                    </div>
-                    <div class="story-card">
-                        <a href="https://ibb.co/Y4DLwL2Y"><img src="https://i.ibb.co/hxXmwmsh/unnamed-50.webp"
-                                alt="Resultado de aluna - Antes e depois" border="0"></a>
-                    </div>
-                    <div class="story-card">
-                        <a href="https://ibb.co/j9KVdb9X"><img src="https://i.ibb.co/GfwsXnfS/unnamed-48.webp"
-                                alt="Evolução de peso - História de Sucesso" border="0"></a>
-                    </div>
-                    <div class="story-card">
-                        <a href="https://ibb.co/BKC5nQV3"><img src="https://i.ibb.co/gFRL4fM9/unnamed-51.webp"
-                                alt="Mudança corporal - Antes e depois" border="0"></a>
+                <div class="stories-carousel">
+                    <div class="carousel-track" id="storiesTrack">
+                        <div class="carousel-slide">
+                            <div class="story-card">
+                                <a href="https://ibb.co/hF0V9r7M"><img src="https://i.ibb.co/pjqdwN0P/unnamed-49.webp"
+                                        alt="Transformação antes e depois - História de Sucesso" border="0"></a>
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="story-card">
+                                <a href="https://ibb.co/Y4DLwL2Y"><img src="https://i.ibb.co/hxXmwmsh/unnamed-50.webp"
+                                        alt="Resultado de aluna - Antes e depois" border="0"></a>
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="story-card">
+                                <a href="https://ibb.co/j9KVdb9X"><img src="https://i.ibb.co/GfwsXnfS/unnamed-48.webp"
+                                        alt="Evolução de peso - História de Sucesso" border="0"></a>
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="story-card">
+                                <a href="https://ibb.co/BKC5nQV3"><img src="https://i.ibb.co/gFRL4fM9/unnamed-51.webp"
+                                        alt="Mudança corporal - Antes e depois" border="0"></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -1278,22 +1286,26 @@
                     <h3>Quem Usa <br><strong>TEM RESULTADO</strong> 😉👇</h3>
                 </div>
 
-                <div class="results-gallery stories-grid">
-                    <div class="story-card active">
-                        <img src="https://i.ibb.co/Ps0Qftnj/unnamed-52.webp" alt="Resultado comprovado"
-                            class="img-large">
+                <div class="results-gallery">
+                    <div class="result-item">
+                        <a href="https://ibb.co/BHFNSwx3"><img src="https://i.ibb.co/Ps0Qftnj/unnamed-52.webp"
+                                alt="Resultado comprovado de aluna Seca Jejum" border="0"></a>
                     </div>
-                    <div class="story-card">
-                        <img src="https://i.ibb.co/qMXjYx4B/unnamed-53.webp" alt="Evolução real" class="img-large">
+                    <div class="result-item">
+                        <a href="https://ibb.co/JR0tjCbn"><img src="https://i.ibb.co/qMXjYx4B/unnamed-53.webp"
+                                alt="Evolução real de aluna com o plano" border="0"></a>
                     </div>
-                    <div class="story-card">
-                        <img src="https://i.ibb.co/q3xCG9Zs/unnamed-55.webp" alt="Antes e depois" class="img-large">
+                    <div class="result-item">
+                        <a href="https://ibb.co/fzQ9Rtcp"><img src="https://i.ibb.co/q3xCG9Zs/unnamed-55.webp"
+                                alt="Antes e depois do jejum intermitente" border="0"></a>
                     </div>
-                    <div class="story-card">
-                        <img src="https://i.ibb.co/rRxvW4wy/unnamed-54.webp" alt="Perda de peso" class="img-large">
+                    <div class="result-item">
+                        <a href="https://ibb.co/zTXNkG4f"><img src="https://i.ibb.co/rRxvW4wy/unnamed-54.webp"
+                                alt="Perda de peso visível com o método" border="0"></a>
                     </div>
-                    <div class="story-card">
-                        <img src="https://i.ibb.co/bRNd4dnc/unnamed-56.webp" alt="Resultados" class="img-large">
+                    <div class="result-item">
+                        <a href="https://ibb.co/BKTshsR0"><img src="https://i.ibb.co/bRNd4dnc/unnamed-56.webp"
+                                alt="Resultados alcançados por nossas alunas" border="0"></a>
                     </div>
                 </div>
 
