Update carousel design and security badge

--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@
 
                 <button class="cta-btn pulse-btn large">RECEBER O MEU PLANO</button>
                 <div class="security-badge-container">
-                    <img src="https://i.ibb.co/99GTLkt9/46609c7e-a86f-4d6c-a0ac-976ec1a532b9.webp" alt="Compra Segura"
+                    <img src="https://i.ibb.co/Y4T7Gh55/download-Photoroom.png" alt="Compra Segura"
                         class="security-badge-img">
                 </div>
             </div>
@@ -1253,32 +1253,47 @@
             <div class="success-stories-section">
                 <h2 class="section-title">Veja as histórias de sucesso das nossas alunas</h2>
 
-                <div class="stories-carousel">
-                    <div class="carousel-track" id="storiesTrack">
-                        <div class="carousel-slide">
-                            <div class="story-card">
-                                <a href="https://ibb.co/hF0V9r7M"><img src="https://i.ibb.co/pjqdwN0P/unnamed-49.webp"
-                                        alt="Transformação antes e depois - História de Sucesso" border="0"></a>
+                <div class="carousel-wrapper">
+                    <button class="carousel-nav prev-btn" id="prevSlide">❮</button>
+                    <div class="stories-carousel">
+                        <div class="carousel-track" id="storiesTrack">
+                            <div class="carousel-slide">
+                                <div class="story-card">
+                                    <a href="https://ibb.co/hF0V9r7M"><img
+                                            src="https://i.ibb.co/pjqdwN0P/unnamed-49.webp"
+                                            alt="Transformação antes e depois - História de Sucesso" border="0"></a>
+                                </div>
+                            </div>
+                            <div class="carousel-slide">
+                                <div class="story-card">
+                                    <a href="https://ibb.co/Y4DLwL2Y"><img
+                                            src="https://i.ibb.co/hxXmwmsh/unnamed-50.webp"
+                                            alt="Resultado de aluna - Antes e depois" border="0"></a>
+                                </div>
+                            </div>
+                            <div class="carousel-slide">
+                                <div class="story-card">
+                                    <a href="https://ibb.co/j9KVdb9X"><img
+                                            src="https://i.ibb.co/GfwsXnfS/unnamed-48.webp"
+                                            alt="Evolução de peso - História de Sucesso" border="0"></a>
+                                </div>
+                            </div>
+                            <div class="carousel-slide">
+                                <div class="story-card">
+                                    <a href="https://ibb.co/BKC5nQV3"><img
+                                            src="https://i.ibb.co/gFRL4fM9/unnamed-51.webp"
+                                            alt="Mudança corporal - Antes e depois" border="0"></a>
+                                </div>
                             </div>
                         </div>
-                        <div class="carousel-slide">
-                            <div class="story-card">
-                                <a href="https://ibb.co/Y4DLwL2Y"><img src="https://i.ibb.co/hxXmwmsh/unnamed-50.webp"
-                                        alt="Resultado de aluna - Antes e depois" border="0"></a>
-                            </div>
-                        </div>
-                        <div class="carousel-slide">
-                            <div class="story-card">
-                                <a href="https://ibb.co/j9KVdb9X"><img src="https://i.ibb.co/GfwsXnfS/unnamed-48.webp"
-                                        alt="Evolução de peso - História de Sucesso" border="0"></a>
-                            </div>
-                        </div>
-                        <div class="carousel-slide">
-                            <div class="story-card">
-                                <a href="https://ibb.co/BKC5nQV3"><img src="https://i.ibb.co/gFRL4fM9/unnamed-51.webp"
-                                        alt="Mudança corporal - Antes e depois" border="0"></a>
-                            </div>
-                        </div>
+                    </div>
+                    <button class="carousel-nav next-btn" id="nextSlide">❯</button>
+
+                    <div class="carousel-dots" id="carouselDots">
+                        <span class="dot active" data-index="0"></span>
+                        <span class="dot" data-index="1"></span>
+                        <span class="dot" data-index="2"></span>
+                        <span class="dot" data-index="3"></span>
                     </div>
                 </div>
 
@@ -1311,7 +1326,7 @@
 
                 <button class="cta-btn pulse-btn large">RECEBER O MEU PLANO</button>
                 <div class="security-badge-container">
-                    <img src="https://i.ibb.co/99GTLkt9/46609c7e-a86f-4d6c-a0ac-976ec1a532b9.webp" alt="Compra Segura"
+                    <img src="https://i.ibb.co/Y4T7Gh55/download-Photoroom.png" alt="Compra Segura"
                         class="security-badge-img">
                 </div>
             </div>
