Update metabolism comparison image on sales page

--- a/index.html
+++ b/index.html
@@ -1130,10 +1130,10 @@
 
             <!-- Seção Comparativa de Metabolismo -->
             <div class="metabolism-comparison" style="display: block; text-align: center;">
-                <a href="https://ibb.co/zWbnvwCW">
-                    <img src="https://i.ibb.co/cKtgndRK/unnamed-46.jpg" alt="unnamed (46)" border="0"
-                        style="width: 100%; max-width: 600px; height: auto;">
-                </a>
+                <a href="https://ibb.co/xKck25NZ"><img
+                        src="https://i.ibb.co/mrYjRz3p/quality-restoration-20260203150654276.webp"
+                        alt="quality restoration 20260203150654276" border="0"
+                        style="width: 100%; max-width: 600px; height: auto;"></a>
             </div>
 
             <!-- Box de Escassez e Urgência -->
