Fix translation for Step 1 (Age)

--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
     <!-- Main Quiz Container -->
     <main class="quiz-container">
 
-        <!-- Etapa 1: Idade -->
+        <!-- Etapa 1: Edad -->
         <section class="quiz-step active" data-step="1">
-            <h1 class="quiz-title">Jejum intermitente</h1>
-            <p class="quiz-subtitle">De acordo com sua idade</p>
+            <h1 class="quiz-title">Ayuno Intermitente</h1>
+            <p class="quiz-subtitle">Según tu edad</p>
             <div class="options-list">
                 <button class="option-card" data-value="18-25">
-                    <img src="https://i.ibb.co/jvy7XmSL/1.webp" alt="18-25 anos" class="option-outcome-img">
-                    <span>18 a 25 anos</span>
+                    <img src="https://i.ibb.co/jvy7XmSL/1.webp" alt="18-25 años" class="option-outcome-img">
+                    <span>18 a 25 años</span>
                 </button>
                 <button class="option-card" data-value="26-35">
-                    <img src="https://i.ibb.co/8DXkg6N7/faca618d-5574-44ea-a30c-045460638fdf.webp" alt="26-35 anos"
+                    <img src="https://i.ibb.co/8DXkg6N7/faca618d-5574-44ea-a30c-045460638fdf.webp" alt="26-35 años"
                         class="option-outcome-img">
-                    <span>26 a 35 anos</span>
+                    <span>26 a 35 años</span>
                 </button>
                 <button class="option-card" data-value="36-45">
-                    <img src="https://i.ibb.co/0Pq8FK4/c2f506ba-599f-449c-b87b-a651a70ad591.webp" alt="36-45 anos"
+                    <img src="https://i.ibb.co/0Pq8FK4/c2f506ba-599f-449c-b87b-a651a70ad591.webp" alt="36-45 años"
                         class="option-outcome-img">
-                    <span>36 a 45 anos</span>
+                    <span>36 a 45 años</span>
                 </button>
                 <button class="option-card" data-value="46+">
-                    <img src="https://i.ibb.co/jPQnZgpZ/8334d8e8-5f6a-42b8-9cbb-5462ff2a49eb.webp" alt="+46 anos"
+                    <img src="https://i.ibb.co/jPQnZgpZ/8334d8e8-5f6a-42b8-9cbb-5462ff2a49eb.webp" alt="+46 años"
                         class="option-outcome-img">
-                    <span>+46 anos</span>
+                    <span>+46 años</span>
                 </button>
             </div>
         </section>
