Standardize chart title size and style

--- a/index.html
+++ b/index.html
@@ -938,6 +938,7 @@
             </div>
 
             <div class="weight-chart-wrapper animated-chart">
+                <div class="chart-title">KG en 4 semanas</div>
                 <div class="chart-reveal-mask"></div>
                 <svg viewBox="0 0 480 300" class="weight-chart-svg">
                     <defs>
@@ -952,10 +953,6 @@
                             <stop offset="100%" stop-color="#20ec31"></stop>
                         </linearGradient>
                     </defs>
-
-                    <!-- Title -->
-                    <text x="30" y="25" fill="#1e293b" font-size="18" font-weight="800"
-                        font-family="Montserrat, sans-serif">KG en 4 semanas</text>
 
                     <!-- Area fill -->
                     <path fill="url(#premiumFillPreview)"
