--- a/dashboard.html
+++ b/dashboard.html
@@ -4,79 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seca Ayuno - Dashboard v1.1</title>
-
-    <!-- Dependencies -->
+    <title>Quiz Dashboard - Analytics</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg-dark: #0f172a;
-            --bg-card: #1e293b;
-            --text-primary: #f1f5f9;
-            --text-secondary: #94a3b8;
-            --accent: #4ade80;
-            --danger: #f87171;
-            --grid-color: #334155;
+            --primary: #4CAF50;
+            --dark: #333;
+            --light: #f5f5f5;
         }
 
         body {
-            font-family: 'Inter', sans-serif;
-            background-color: var(--bg-dark);
-            color: var(--text-primary);
+            font-family: 'Montserrat', sans-serif;
+            background: #f0f2f5;
             margin: 0;
             padding: 20px;
-            min-height: 100vh;
+            color: var(--dark);
         }
 
-        .login-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: var(--bg-dark);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-        }
-
-        .login-box {
-            background: var(--bg-card);
-            padding: 30px;
-            border-radius: 12px;
-            text-align: center;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-        }
-
-        .login-box input {
-            padding: 10px;
-            border-radius: 6px;
-            border: 1px solid var(--grid-color);
-            background: var(--bg-dark);
-            color: white;
-            margin-bottom: 10px;
-            width: 200px;
-        }
-
-        .login-box button {
-            background: var(--accent);
-            color: var(--bg-dark);
-            border: none;
-            padding: 10px 20px;
-            border-radius: 6px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-
-        .dashboard-container {
+        .container {
             max-width: 1200px;
             margin: 0 auto;
-            display: none;
-            /* Hidden until login */
         }
 
         .header {
@@ -84,189 +33,158 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 30px;
-            padding-bottom: 20px;
-            border-bottom: 1px solid var(--grid-color);
         }
 
-        .kpi-grid {
+        .stats-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
             margin-bottom: 30px;
         }
 
-        .kpi-card {
-            background: var(--bg-card);
+        .stat-card {
+            background: white;
             padding: 20px;
             border-radius: 12px;
-            border: 1px solid var(--grid-color);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            text-align: center;
         }
 
-        .kpi-title {
-            color: var(--text-secondary);
-            font-size: 0.9rem;
-            margin-bottom: 8px;
-        }
-
-        .kpi-value {
-            font-size: 2rem;
+        .stat-value {
+            font-size: 32px;
             font-weight: 700;
-            color: var(--accent);
+            color: var(--primary);
+            margin: 10px 0;
         }
 
-        .chart-section {
-            background: var(--bg-card);
-            padding: 20px;
-            border-radius: 12px;
-            border: 1px solid var(--grid-color);
+        .chart-container {
+            background: white;
+            padding: 25px;
+            border-radius: 16px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
             margin-bottom: 30px;
+            height: 400px;
         }
 
-        .chart-header {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-
-        .refresh-btn {
-            background: transparent;
-            border: 1px solid var(--accent);
-            color: var(--accent);
-            padding: 5px 15px;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: all 0.2s;
-        }
-
-        .refresh-btn:hover {
-            background: var(--accent);
-            color: var(--bg-dark);
-        }
-
-        table {
+        .recent-table {
             width: 100%;
             border-collapse: collapse;
-            color: var(--text-secondary);
+            background: white;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
         }
 
-        th,
-        td {
+        .recent-table th,
+        .recent-table td {
+            padding: 15px;
             text-align: left;
-            padding: 12px;
-            border-bottom: 1px solid var(--grid-color);
+            border-bottom: 1px solid #eee;
         }
 
-        th {
-            color: var(--text-primary);
+        .recent-table th {
+            background: #f9f9f9;
+            font-weight: 600;
+        }
+
+        .status-badge {
+            padding: 4px 8px;
+            border-radius: 20px;
+            font-size: 12px;
+            font-weight: 600;
+        }
+
+        .status-complete {
+            background: #e8f5e9;
+            color: #2e7d32;
+        }
+
+        .status-progress {
+            background: #fff3e0;
+            color: #ef6c00;
+        }
+
+        button#refreshBtn {
+            padding: 10px 20px;
+            background: var(--primary);
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 600;
+        }
+
+        button#refreshBtn:hover {
+            opacity: 0.9;
         }
     </style>
 </head>
 
 <body>
-
-    <!-- Login Screen -->
-    <div class="login-overlay" id="loginScreen">
-        <div class="login-box">
-            <h2>Acceso Restringido</h2>
-            <input type="password" id="passwordInput" placeholder="Contraseña">
-            <button onclick="checkPassword()">Entrar</button>
-            <p id="loginError" style="color: var(--danger); font-size: 0.8rem; margin-top: 10px; display: none;">
-                Contraseña incorrecta</p>
-        </div>
-    </div>
-
-    <!-- Dashboard Content -->
-    <div class="dashboard-container" id="dashboardContent">
+    <div class="container">
         <div class="header">
-            <h1>Seca Ayuno Analytics</h1>
-            <button class="refresh-btn" onclick="fetchData()">🔄 Actualizar</button>
+            <h1>📊 Quiz Analytics</h1>
+            <button id="refreshBtn">Atualizar Dados</button>
         </div>
 
-        <div class="kpi-grid">
-            <div class="kpi-card">
-                <div class="kpi-title">Visitas Totales</div>
-                <div class="kpi-value" id="totalVisits">-</div>
+        <div class="stats-grid">
+            <div class="stat-card">
+                <h3>Total Sessões</h3>
+                <div class="stat-value" id="totalSessions">-</div>
             </div>
-            <div class="kpi-card">
-                <div class="kpi-title">Finalizados</div>
-                <div class="kpi-value" id="totalCompleted">-</div>
+            <div class="stat-card">
+                <h3>Concluídos (Step 42)</h3>
+                <div class="stat-value" id="totalCompleted">-</div>
             </div>
-            <div class="kpi-card">
-                <div class="kpi-title">Taxa de Conversão</div>
-                <div class="kpi-value" id="conversionRate">-%</div>
-            </div>
-            <div class="kpi-card">
-                <div class="kpi-title">Abandono Médio (Step)</div>
-                <div class="kpi-value" id="avgDropoff">-</div>
+            <div class="stat-card">
+                <h3>Taxa de Conversão</h3>
+                <div class="stat-value" id="conversionRate">-%</div>
             </div>
         </div>
 
-        <div class="chart-section">
-            <div class="chart-header">
-                <h3>Funil de Retenção (Passo a Passo)</h3>
-            </div>
-            <div style="height: 400px;">
-                <canvas id="funnelChart"></canvas>
-            </div>
+        <div class="chart-container">
+            <canvas id="funnelChart"></canvas>
         </div>
 
-        <div class="chart-section">
-            <h3>Últimas Sessões</h3>
-            <div style="overflow-x: auto;">
-                <table id="sessionsTable">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Data</th>
-                            <th>Etapa Final</th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Rows injected via JS -->
-                    </tbody>
-                </table>
-            </div>
+        <h2>Sessões Recentes</h2>
+        <div style="overflow-x: auto;">
+            <table class="recent-table">
+                <thead>
+                    <tr>
+                        <th>Data</th>
+                        <th>Step Atual</th>
+                        <th>Status</th>
+                        <th>Altura/Peso</th>
+                        <th>ID da Sessão</th>
+                    </tr>
+                </thead>
+                <tbody id="sessionsBody">
+                    <tr>
+                        <td colspan="5" style="text-align:center">Carregando dados...</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 
     <script>
-        // Configuration
+        // --- CONFIG ---
         const SUPABASE_URL = 'https://bwpjmowuqkwogbtnheyp.supabase.co';
         const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJ3cGptb3d1cWt3b2didG5oZXlwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAxNTc5MjEsImV4cCI6MjA4NTczMzkyMX0.RFSrtexhbic7fTn51gTFuJlmSuo5-9Ciyp367f8I_8A';
-        const DASH_PASSWORD = "admin"; // Simple client-side protection
-
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-        // Security Check
-        function checkPassword() {
-            const input = document.getElementById('passwordInput').value;
-            if (input === DASH_PASSWORD) {
-                document.getElementById('loginScreen').style.display = 'none';
-                document.getElementById('dashboardContent').style.display = 'block';
-                fetchData();
-            } else {
-                document.getElementById('loginError').style.display = 'block';
-            }
-        }
+        let myChart = null;
 
-        // Allow Enter key for password
-        document.getElementById('passwordInput').addEventListener('keypress', function (e) {
-            if (e.key === 'Enter') checkPassword();
-        });
-
-        // Data Fetching
         async function fetchData() {
-            // Fetch all sessions (Limit 1000 for demo)
             const { data, error } = await supabase
                 .from('quiz_sessions')
                 .select('*')
                 .order('created_at', { ascending: false })
-                .limit(1000);
+                .limit(1000); // Analyze last 1000 sessions
 
             if (error) {
-                console.error('Error fetching data:', error);
-                alert('Erro ao carregar dados do Supabase');
+                console.error('Error fetching:', error);
+                alert('Erro ao carregar dados');
                 return;
             }
 
@@ -274,87 +192,55 @@
         }
 
         function processData(sessions) {
-            // 1. KPIs
+            // 1. KPI Stats
             const total = sessions.length;
-            const completed = sessions.filter(s => s.completed).length;
+            const completed = sessions.filter(s => s.current_step >= 42 || s.completed).length;
             const rate = total > 0 ? ((completed / total) * 100).toFixed(1) : 0;
 
-            // Average dropoff step
-            const totalStepsSum = sessions.reduce((acc, curr) => acc + curr.current_step, 0);
-            const avgStep = total > 0 ? Math.round(totalStepsSum / total) : 0;
-
-            document.getElementById('totalVisits').textContent = total;
-            document.getElementById('totalCompleted').textContent = completed;
-            document.getElementById('conversionRate').textContent = rate + '%';
-            document.getElementById('avgDropoff').textContent = avgStep;
+            document.getElementById('totalSessions').innerText = total;
+            document.getElementById('totalCompleted').innerText = completed;
+            document.getElementById('conversionRate').innerText = rate + '%';
 
             // 2. Funnel Chart Data
-            // We need to know how many people passed through EACH step.
-            // If a user is at step 10, they passed through 1..9.
-            const totalSteps = 42;
-            const stepCounts = new Array(totalSteps + 1).fill(0); // Index 1 to 42
-
-            sessions.forEach(session => {
-                // For each session, increment all steps up to current_step
-                for (let i = 1; i <= Math.min(session.current_step, totalSteps); i++) {
-                    stepCounts[i]++;
-                }
+            // Count users at each step "milestone" (e.g., Step 1, 10, 20, 30, 42)
+            // Or simpler: Users who reached at least Step X
+            const steps = Array.from({ length: 42 }, (_, i) => i + 1);
+            const funnelCounts = steps.map(step => {
+                return sessions.filter(s => s.current_step >= step).length;
             });
 
-            // Prepare Chart Data (remove index 0)
-            const labels = [];
-            const dataPoints = [];
-            for (let i = 1; i <= totalSteps; i++) {
-                labels.push(`Step ${i}`);
-                dataPoints.push(stepCounts[i]);
-            }
-
-            renderChart(labels, dataPoints);
-            renderTable(sessions.slice(0, 10)); // Show last 10
+            renderChart(steps, funnelCounts);
+            renderTable(sessions.slice(0, 50)); // Show last 50 rows
         }
-
-        let funnelChartInstance = null;
 
         function renderChart(labels, data) {
             const ctx = document.getElementById('funnelChart').getContext('2d');
 
-            if (funnelChartInstance) {
-                funnelChartInstance.destroy();
-            }
+            if (myChart) myChart.destroy();
 
-            funnelChartInstance = new Chart(ctx, {
+            myChart = new Chart(ctx, {
                 type: 'bar',
                 data: {
                     labels: labels,
                     datasets: [{
-                        label: 'Usuários Ativos',
+                        label: 'Usuários Ativos por Etapa',
                         data: data,
-                        backgroundColor: '#4ade80',
+                        backgroundColor: '#4CAF50',
                         borderRadius: 4
                     }]
                 },
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
-                    indexAxis: 'y', // Horizontal Layout
                     plugins: {
-                        legend: { display: false },
-                        tooltip: {
-                            callbacks: {
-                                label: function (context) {
-                                    return `${context.raw} usuários`;
-                                }
-                            }
+                        title: {
+                            display: true,
+                            text: 'Funil de Retenção (Usuários que atingiram cada etapa)'
                         }
                     },
                     scales: {
                         y: {
-                            ticks: { color: '#94a3b8' },
-                            grid: { color: '#334155' }
-                        },
-                        x: {
-                            ticks: { color: '#94a3b8' },
-                            grid: { color: '#334155' }
+                            beginAtZero: true
                         }
                     }
                 }
@@ -362,25 +248,37 @@
         }
 
         function renderTable(sessions) {
-            const tbody = document.querySelector('#sessionsTable tbody');
+            const tbody = document.getElementById('sessionsBody');
             tbody.innerHTML = '';
 
             sessions.forEach(s => {
-                const date = new Date(s.created_at).toLocaleString('pt-BR');
-                const status = s.completed ?
-                    '<span style="color: #4ade80">Concluído</span>' :
-                    '<span style="color: #f87171">Abandono</span>';
+                const date = new Date(s.created_at).toLocaleString();
+                const status = s.completed || s.current_step >= 42
+                    ? '<span class="status-badge status-complete">Completo</span>'
+                    : '<span class="status-badge status-progress">Em progresso</span>';
 
-                const tr = document.createElement('tr');
-                tr.innerHTML = `
-                    <td><span title="${s.id}">${s.id.slice(0, 8)}...</span></td>
-                    <td>${date}</td>
-                    <td>${s.current_step}</td>
-                    <td>${status}</td>
+                let metrics = '-';
+                if (s.user_data && s.user_data.height) {
+                    metrics = `${s.user_data.height}cm / ${s.user_data.currentWeight || '?'}kg`;
+                }
+
+                const row = `
+                    <tr>
+                        <td>${date}</td>
+                        <td>Passo ${s.current_step}</td>
+                        <td>${status}</td>
+                        <td>${metrics}</td>
+                        <td style="font-family:monospace; font-size:12px; color:#999">${s.id.split('-')[0]}...</td>
+                    </tr>
                 `;
-                tbody.appendChild(tr);
+                tbody.innerHTML += row;
             });
         }
+
+        document.getElementById('refreshBtn').addEventListener('click', fetchData);
+
+        // Auto Load
+        fetchData();
     </script>
 </body>
 
