--- a/dashboard.html
+++ b/dashboard.html
@@ -122,10 +122,25 @@
 
 <body>
     <div class="container">
+        <!-- ERROR TRAP SCRIPT -->
+        <script>
+            window.onerror = function (msg, url, line, col, error) {
+                const div = document.createElement('div');
+                div.style.background = 'red';
+                div.style.color = 'white';
+                div.style.padding = '20px';
+                div.style.margin = '20px';
+                div.style.fontWeight = 'bold';
+                div.innerText = `CRITICAL JS ERROR: ${msg}\nLine: ${line}`;
+                document.body.prepend(div);
+                return false;
+            };
+        </script>
+
         <div class="header">
             <h1>📊 Quiz Analytics</h1>
             <div style="display:flex; gap:10px;">
-                <button id="refreshBtn">Atualizar Dados</button>
+                <button id="refreshBtn">Obter Dados</button>
             </div>
         </div>
 
